--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CubeSolverWithDeepLerning)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CubeSolverWithDeepLerning main.cpp Dense.cpp LayerLeakyReLU.cpp Model.cpp InputLayer.cpp)
+add_executable(CubeSolverWithDeepLerning main.cpp Dense.cpp LayerLeakyReLU.cpp Model.cpp InputLayer.cpp LayerSoftmax.cpp SetOfActivationFun.cpp)
